// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`EthGenesisVault can deposit through receive fallback function 1`] = `
Object {
  "calldataByteLength": 4,
  "gasUsed": 74732,
}
`;

exports[`EthGenesisVault migrate migrates from rewardEthToken 1`] = `
Object {
  "calldataByteLength": 100,
  "gasUsed": 74426,
}
`;

exports[`EthGenesisVault pulls assets on claim exited assets 1`] = `
Object {
  "calldataByteLength": 68,
  "gasUsed": 64372,
}
`;

exports[`EthGenesisVault pulls assets on multiple validators registration 1`] = `
Object {
  "calldataByteLength": 3716,
  "gasUsed": 682440,
}
`;

exports[`EthGenesisVault pulls assets on single validator registration 1`] = `
Object {
  "calldataByteLength": 1476,
  "gasUsed": 338819,
}
`;

exports[`EthGenesisVault update state deducts rewards on first state update 1`] = `
Object {
  "calldataByteLength": 196,
  "gasUsed": 145025,
}
`;

exports[`EthGenesisVault update state splits penalty between rewardEthToken and vault 1`] = `
Object {
  "calldataByteLength": 196,
  "gasUsed": 100433,
}
`;

exports[`EthGenesisVault update state splits reward between rewardEthToken and vault 1`] = `
Object {
  "calldataByteLength": 196,
  "gasUsed": 162125,
}
`;
